@startuml

title __SERVER's Class Diagram__\n

  namespace com.server {
    class com.server.Server {
        {static} ~ logger : Logger
        {static} - PORT : int
        {static} - addresses : HashMap<String, InetAddress>
        {static} - listener : ServerSocket
        {static} - names : HashMap<String, User>
        {static} - users : ArrayList<User>
        {static} - writers : HashMap<String, ObjectOutputStream>
        + Server()
        {static} + getListener()
        {static} + main()
        + run()
    }
  }
  

  namespace com.server {
    class com.server.Server.Handler {
        - channel : String
        - input : ObjectInputStream
        - is : InputStream
        - logger : Logger
        - name : String
        - os : OutputStream
        - output : ObjectOutputStream
        - socket : Socket
        + Handler()
        + run()
        - addToList()
        - changeChannel()
        - changeStatus()
        - checkDuplicateUsername()
        - closeConnections()
        - closeP2P()
        - openP2P()
        - removeFromList()
        - sendNotification()
        - write()
    }
  }
  

  namespace com.server {
    class com.server.ServerController {
        + portField : TextField
        - closeIcon : ImageView
        - mainPane : AnchorPane
        - startBtn : JFXButton
        + closeSystem()
        + initialize()
        + onButtonAction()
        - closeServer()
        - startServer()
    }
  }
  

  namespace com.server {
    class com.server.ServerLauncher {
        {static} + main()
        + start()
    }
  }
  

  com.server.Server .up.|> java.lang.Runnable
  com.server.Server +-down- com.server.Server.Handler
  com.server.Server.Handler o-- com.messages.User : user
  com.server.ServerController .up.|> javafx.fxml.Initializable
  com.server.ServerController o-- com.server.Server : server
  com.server.ServerLauncher -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
